--- a/themes/river/layouts/post/single.html
+++ b/themes/river/layouts/post/single.html
@@ -2,4 +2,5 @@
     <h1>{{ .Title }}</h1>
     <h4>{{ .Date.Format "Mon, Jan 2, 2006" }}</h4>
     {{ .Content }}
+    {{ template "_internal/disqus.html" . }}
 {{ partial "footer.html" . }}
