添加c++基础知识

--- a/themes/river/layouts/partials/footer.html
+++ b/themes/river/layouts/partials/footer.html
@@ -20,8 +20,18 @@
     </table>
 </div>
 </body>
+    <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+        tex2jax: { 
+            inlineMath: [ ['$','$'], ['\\(','\\)'] ],
+            displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+            processEscapes: true
+        }
+    });
+    </script>
     {{ template "_internal/google_analytics.html" . }}
     <script type="text/javascript" src="{{.Site.BaseURL}}js/function.js"></script>
     <script type="text/javascript" src="{{.Site.BaseURL}}js/prettify.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
 </html>
