--- a/themes/river/layouts/partials/header.html
+++ b/themes/river/layouts/partials/header.html
@@ -5,6 +5,7 @@
     <title>{{ .Title }}</title>
     <link rel="stylesheet" type="text/css" href="{{.Site.BaseURL}}css/style.css" />
     <!--<link rel="stylesheet" type="text/css" href="{{.Site.BaseURL}}css/prettify.css" />-->
+    <link rel="shortcut icon" href="{{.Site.BaseURL}}img/favicon.ico">
     <link rel="stylesheet" type="text/css" href="{{.Site.BaseURL}}css/sunburst.css" />
 </head>
 <body onload="PR.prettyPrint()">
@@ -12,7 +13,7 @@
         <table width="100%" summary="Navigation header">
             <tbody>
                 <tr>
-                    <th colspan="3" align="center">Co1driver 的个人博客</th>
+                    <td colspan="3" align="center">Co1driver 的个人博客</td>
                 </tr>
                 <tr>
                     <td width="90%" align="left">&nbsp;</td>
