--- a/themes/river/layouts/_default/baseof.html
+++ b/themes/river/layouts/_default/baseof.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-    {{- partial "head.html" . -}}
+    {{- partial "header.html" . -}}
     <body>
-        {{- partial "header.html" . -}}
+        <!-- {{- partial "header.html" . -}} -->
         <div id="content">
         {{- block "main" . }}{{- end }}
         </div>
