--- a/themes/river/layouts/index.html
+++ b/themes/river/layouts/index.html
@@ -1,13 +1,21 @@
 {{ partial "header.html" . }}
 
-    <h1>Co1driver 的个人博客</h1>
+    <!-- <h1>Co1driver 的个人博客</h1> -->
+    <br />
     <h3>文章</h3>
     {{ $paginator := .Paginate (where .Data.Pages "Type" "post") }}
     {{ range $paginator.Pages }}
-        <ul class="dotLeaders">
-            <li><span><a href="{{ .Permalink }}">{{ .Title }}</a></span><span>{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
-        </ul>
+        {{ range (.Paginator 12).Pages }}
+            <ul class="dotLeaders">
+                <li><span><a href="{{ .Permalink }}">{{ .Title }}</a></span><span>{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
+            </ul>
+        {{ end }}
     {{ end }}
+    <!-- {{ range .Data.Pages }}
+        <h4><a href={{ .Permalink }}>{{ .Title }}</a></h4>
+    {{ end }} -->
+    <br />
     {{ partial "pagination.html" . }}
+    <br />
 
 {{ partial "footer.html" . }}
