--- a/themes/river/static/css/style.css
+++ b/themes/river/static/css/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0.5in auto;
     padding: 0 20px;
     max-width: 1260px;
-    background: #e6e6e6;
+    background: white;
     font-family: "Gill Sans MT","Gill Sans","My Gill Sans","Microsoft YaHei",sans-serif;
 }
 table {
