--- a/themes/river/layouts/index.html
+++ b/themes/river/layouts/index.html
@@ -3,17 +3,14 @@
     <!-- <h1>Co1driver 的个人博客</h1> -->
     <br />
     <h3>文章</h3>
-    {{ $paginator := .Paginate (where .Data.Pages "Type" "post") }}
+    {{ $paginator := .Paginate (where .Pages "Type" "post") }}
     {{ range $paginator.Pages }}
-        {{ range (.Paginator 12).Pages }}
+        {{ range (.Paginator 10).Pages }}
             <ul class="dotLeaders">
                 <li><span><a href="{{ .Permalink }}">{{ .Title }}</a></span><span>{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
             </ul>
         {{ end }}
     {{ end }}
-    <!-- {{ range .Data.Pages }}
-        <h4><a href={{ .Permalink }}>{{ .Title }}</a></h4>
-    {{ end }} -->
     <br />
     {{ partial "pagination.html" . }}
     <br />
