--- a/themes/river/layouts/partials/pagination.html
+++ b/themes/river/layouts/partials/pagination.html
@@ -1,5 +1,5 @@
 {{ $pag := $.Paginator }}
-  {{ if gt $pag.TotalPages 1 }}
+  {{ if gt $pag.TotalPages }}
   <table width="100%">
       <tbody>
         <tr class="pagination">
