--- a/themes/river/layouts/partials/header.html
+++ b/themes/river/layouts/partials/header.html
@@ -16,8 +16,9 @@
                     <td colspan="3" align="center">Co1driver 的个人博客</td>
                 </tr>
                 <tr>
-                    <td width="90%" align="left">&nbsp;</td>
+                    <td width="85%" align="left">&nbsp;</td>
                     <td width="5%" align="center">&nbsp;<a accesskey="h" href="https://github.com/chongg039">GITHUB</a></td>
+                    <td width="5%" align="center">&nbsp;<a accesskey="a" href="{{ .Site.BaseURL }}/photo">PHOTO</a></td>
                     <td width="5%" align="right">&nbsp;<a accesskey="a" href="{{ .Site.BaseURL }}/about">ABOUT</a></td>
                 </tr>
             </tbody>
